# zoy

./: .gitignore  README.md  __main__.py  pyproject.toml  test_zoy.py
test/: test_zoy.py
zoy/: __init__.py  __main__.py  zoy.py
