[tool.poetry]
name = "zoy"
version = "0.1.0"
description = "Count lines of python code in projects"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "." }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
